@@ -23,7 +23,7 @@
   \subsubsection*{${_(u"latex_related_items", default=u"Related Items")}:}
   \begin{itemize}
   % for item in relatedItems:
-    \item{${item['title']}\footnote{\url{${item['url']}}}}
+    \item{${item}}
   % endfor
   \end{itemize}
 % endif
